Fix text wrapping for poll titles on / & /mypolls

--- a/app/client/stylesheets/style.scss
+++ b/app/client/stylesheets/style.scss
@@ -336,12 +336,15 @@ input {
 
     &--link {
         position: relative;
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 80%;
         max-width: 960px;
         // will need a min width once the details are filled in
         height: 50px;
         border: 4px solid $secondary-color;
+        padding: 0 0.5rem;
         margin: 0.5rem auto;
         &:hover {
             cursor: pointer;
@@ -350,10 +353,10 @@ input {
     }
     &--text {
       text-align: center;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      // position: absolute;
+      // top: 50%;
+      // left: 50%;
+      // transform: translate(-50%, -50%);
     
     }
   }
